# RustyFt8

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  NEXT_STEPS.md  README.md  SESSION_SUMMARY.md  TESTING.md  WSJTX.MD  ft8_testmsg.txt  ft8sim  temp.sh
.claude/: context.md
.devcontainer/: Dockerfile  devcontainer.json
benches/: parallel_benchmark.rs
docs/: AP_DECODING_EXPLAINED.md  CONFIG_COMPARISON.md  DECODER_ANALYSIS.md  FINDINGS.md  HYBRID_DECODER_RESULTS.md  MULTIPASS_ANALYSIS.md  MULTIPASS_STATUS.md  OSD_ANALYSIS.md  OSD_IMPLEMENTATION_PLAN.md  OSD_IMPLEMENTATION_STATUS.md  OSD_NEXT_STEPS.md  OSD_QUICK_REFERENCE.md  PHASE_TRACKING_RESULTS.md  SIGNAL_SUBTRACTION_PLAN.md  SNR_RESULTS.md  SNR_TESTING.md  SUBTRACTION_INVESTIGATION.md  SYMBOL_EXTRACTION_DIFFERENCES.md  SYNC_DEBUG_LOG.md  TRACING.md  TRACING_QUICKSTART.md  WSJT-X_DECODER_STRATEGY.md  aliasing_root_cause_20251125.md  coarse_sync_comparison.md  coarse_sync_investigation_20251125.md  decode_investigation_findings.md  decoder_analysis_real_recording.md  dual_llr_implementation_20251125.md  dual_llr_results_20251125.md  f5rxl_final_bottleneck_analysis.md  fine_sync_validation.md  inband_interference_root_cause.md  interpolation_results_20251125.md  investigation_20251122_continued.md  investigation_20251122_session3.md  investigation_20251122_summary.md  investigation_summary_20251122_final.md  ldpc_convergence_analysis.md  llr_4pass_discovery_20251125.md  llr_normalization_discovery.md  (+24 more)
examples/: debug_candidates.rs  debug_decode_pipeline.rs
plots/: .gitignore
scripts/: add_test_case.sh  (+2 more)
(+141 files in other folders)
