[package]
name = "rustyft8"
version = "0.1.0"
edition = "2021"

[dependencies]
biquad = "0.5.0"
bitvec = "1.0.1"
crc = "3.0.1"
hound = "3.5.1"
lazy_static = "1.4.0"
labrador-ldpc = "1.2.1"
libm = "0.2"
lru = "0.7.0"
num = "0.4.3"
paste = "1.0"
plotly = { version = "0.12", features = ["kaleido", "kaleido_download"] }
plotpy = "1.13.0"
rand = "0.9.0"
rand_distr = "0.5.1"
rustfft = "5.1.0"
snafu = "0.8.2"
sonogram = "0.7.1"
