[package]
name = "rustyft8"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
crc = "3.2"
rustfft = "6.2"
num-complex = "0.4"
once_cell = "1.19"
rayon = "1.8"
hound = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
rstest = "0.23"

[[bench]]
name = "parallel_benchmark"
harness = false
